# lextrace-agentic-contract-diff

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: style.css
src/: main.py  models.py  pipeline.py
src/agents/: __init__.py  contextualizer.py  extractor.py
src/utils/: image_processor.py
tests/: __init__.py  test_agents.py  test_image_processor.py  test_pipeline.py
